--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
-matplotlib
 pandas
 numpy
+matplotlib
 seaborn
-geopandas
 pyreadr
-scikit-learn
 tqdm
+geopandas
+scikit-learn
+scikit-learn-extra
