--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 pandas
-numpy
+numpy<=1.26.4
 matplotlib
 seaborn
 pyreadr
 tqdm
 geopandas
-scikit-learn
-scikit-learn-extra
+scikit-learn<=1.3.2
+scikit-learn-extra<=0.3.0
